forcing scrollbar y to prevent page from jumping around

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,3 +1,7 @@
+body {
+	overflow-y: scroll;
+}
+
 h2 {
 	color: #0f3890;
 }
